# rendering

./: .gitignore  tasks.md
rt/: CMakeLists.txt  main.cpp  render.sh
rt/src/: color.h  ray.h  vec3.h
tr/: CMakeLists.txt  main.cpp  render.sh  tgaimage.cpp
tr/src/: draw.cpp  draw.h  geometry.h  model.cpp  model.h  tgaimage.h
tr/tests/: perf_lines.cpp
tr/tests/output/: perf_lines.tga
